# cubiomes-cpp

./: .clang-tidy  .clangd  .gitignore  .nvim.lua  CMakeLists.txt  Makefile  PORTING.md  README.md  biomenoise.cpp  biomenoise.h  biomenoise.hpp  biomes.h  cubiomes-tests  finders.cpp  finders.h  finders.hpp  generator.cpp  generator.h  generator.hpp  layers.cpp  layers.h  layers.hpp  makefile  noise.cpp  noise.h  noise.hpp  quadbase.cpp  quadbase.h  quadbase.hpp  rng.h  tests.cpp  tests_cpp_api.cpp  tests_util.cpp  util.cpp  util.h  util.hpp
.github/ci/: abi_guard.cpp  c_api_smoke.c  cpp_api_smoke.cpp
.github/ci/consumer-cmake/: CMakeLists.txt  consumer_c.c  consumer_cpp.cpp  consumer_cpp_api.cpp
.github/workflows/: ci.yml
.nvim/lsp/: clangd.lua
cmake/: cubiomesConfig.cmake.in
examples/: trivial_ppm.cpp
include/: biomenoise.hpp  biomes.hpp  cpp_api.hpp  finders.hpp  generator.hpp  layers.hpp  legacy_generator.hpp  legacy_util.hpp  noise.hpp  quadbase.hpp  rng.hpp  util.hpp
src/: biomenoise.cpp  biomes.cpp  cpp_api.cpp  finders.cpp  generator.cpp  layers.cpp  noise.cpp  quadbase.cpp  util.cpp
tests/: tests.cpp  tests_cpp_api.cpp  tests_util.cpp
